[project]
name = "ai-incident-response-simulator"
version = "0.1.0"
description = "AI Incident Response Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio",
    "openai",
    "openenv-core>=0.2.0"  # This was specifically requested in your error
]


[project.scripts]
server = "server.app:main"  # Changed from build_ui to main

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"